app-manifests-letsencrypt/05-Ingress-SSL-LetsEncrypt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl-letsencrypt
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"    
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  ingressClassName: azure-application-gateway
  tls:
  - secretName: sapp1-infrainsight-secret 
    hosts:
    - sapp1.infrainsight.in  
  - secretName: sapp2-infrainsight-secret                     
    hosts:
    - sapp2.infrainsight.in
  rules:
    - host: sapp1.infrainsight.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
    - host: sapp2.infrainsight.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port: 
                  number: 80
